--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
         <h2>로그인</h2>
         <input type="text" id="id" placeholder="ID"><br>
         <input type="password" id="pw" placeholder="PW"><br>
-        <button id="loginBtn">로그인</button><br>
+        <button id="loginBtn" type="button">로그인</button><br>
     </section>
     <section>
         <a href="/register">회원가입</a>
