--- a/public/register.html
+++ b/public/register.html
@@ -13,7 +13,7 @@
                 <input type="text" id="regId" placeholder="ID"><br>
                 <input type="password" id="regPw" placeholder="PW"><br>
                 <input type="text" id="regNick" placeholder="NICK"><br>
-                <button id="registerBtn">회원가입</button><br>
+                <button id="registerBtn" type="button">회원가입</button><br>
             </form>
         </div>
     </div>
