--- a/public/main.html
+++ b/public/main.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>메인 페이지</title>
     <link rel="stylesheet" href="/main.css">
+    <style>
+        .hidden { display: none; }
+        .friend-card { padding: 8px; border: 1px solid #ddd; border-radius: 6px; margin-bottom: 8px; }
+        .friend-card p { margin: 4px 0; }
+        .btn-ghost { background: transparent; border: 1px solid #ccc; padding: 6px 10px; border-radius: 4px; }
+    </style>
 </head>
 <body>
     <header>
@@ -23,12 +29,16 @@
             <h2>안녕하세요, 사용자님!</h2>
             <p>이곳은 메인 페이지입니다. 원하는 기능을 이용해보세요.</p>
         </section>
-
+        
         <section class="cards">
+            <div class="card">
+                <h3>친구</h3>
+                <p>새로운 친구가 추가 되었습니다. 확인해보세요!</p>
+                <button id="friend" type="button" onclick="openFriends()">자세히 보기</button>
+            </div>
             <div class="card">
                 <h3>공지사항</h3>
                 <p>새로운 공지가 있습니다. 확인해보세요!</p>
-                <!-- show('schedule') 대신 openSchedule() 호출 -->
                 <button id="notice" type="button" onclick="openSchedule()">자세히 보기</button>
             </div>
             <div class="card">
@@ -55,81 +65,143 @@
         </div>
     </section>
 
+    <section id="friends" class="hidden" tabindex="-1" aria-hidden="true">
+        <h2>친구</h2>
+        <p>친구 목록을 표시합니다.</p>
+        <div style="margin:8px 0">
+            <button id="load-friends-btn" type="button" class="btn-ghost">친구 목록 새로고침</button>
+            <button type="button" class="btn-ghost" onclick="backToMain()">메인으로 돌아가기</button>
+        </div>
+
+        <div id="friendlist">
+            <div id="friend-items" aria-live="polite"></div>
+        </div>
+    </section>
+
     <footer>
         <p>&copy; 2025 My Project. All rights reserved.</p>
     </footer>
 
     <script>
-        // 참고: main-content, schedule 엘리먼트를 제어해서 화면을 전환합니다.
+        // 데이터 (실제는 서버에서 fetch 해올 수 있음)
+        let friendData = [
+            { name: "김영자", category: "운동", desc: "아침 운동", phone: "01012345678"},
+            { name: "박철수", category: "스터디", desc: "자바스크립트 공부", phone: "01098765432"}
+        ];
+
+        // DOM 레퍼런스
         const mainEl = document.getElementById('main-content');
         const scheduleEl = document.getElementById('schedule');
-        const logoutBtn = document.getElementById('logoutBtn');
+        const friendsEl = document.getElementById('friends');
+        const friendItemsEl = document.getElementById('friend-items');
+        const loadFriendsBtn = document.getElementById('load-friends-btn');
 
-        function openSchedule() {
-            // 메인 숨기고 스케줄 보이기
-            mainEl.classList.add('hidden');
-            scheduleEl.classList.remove('hidden');
+        // 존재 확인 유틸
+        function exists(el) { return el instanceof Element; }
 
-            // 접근성: 스크린리더가 읽을 수 있게 변경
-            scheduleEl.setAttribute('aria-hidden', 'false');
+        // 섹션 매핑
+        const sections = {
+            main: mainEl,
+            schedule: scheduleEl,
+            friends: friendsEl
+        };
 
-            // 포커스 이동 (tabindex="-1" 필요)
-            scheduleEl.focus({ preventScroll: true });
+        // 섹션이 보여질 때 실행할 콜백들
+        const onShow = {
+            friends: () => loadFriendlist(),
+            schedule: () => {/* 필요 시 일정 로드 */}
+        };
 
-            // URL에 해시를 추가해서 뒤로가기 동작을 자연스럽게 함
-            history.pushState({ page: 'schedule' }, '', '#schedule');
-        }
+        // 섹션 보여주기/숨기기 공용 함수
+        function showSection(name, push = true) {
+            if (!sections[name]) return;
 
-        function backToMain() {
-            // 스케줄 숨기고 메인 보이기
-            scheduleEl.classList.add('hidden');
-            mainEl.classList.remove('hidden');
+            Object.entries(sections).forEach(([key, el]) => {
+                if (!exists(el)) return;
+                const isTarget = (key === name);
+                el.classList.toggle('hidden', !isTarget);
+                el.setAttribute('aria-hidden', (!isTarget).toString());
+            });
 
-            scheduleEl.setAttribute('aria-hidden', 'true');
+            const target = sections[name];
+            if (exists(target)) {
+                try { target.focus({ preventScroll: true }); } catch(e) {}
+            }
 
-            // 포커스 메인 상단으로
-            const firstHeading = mainEl.querySelector('h2');
-            if (firstHeading) firstHeading.focus();
+            // onShow 콜백 호출 (비동기 가능)
+            if (onShow[name]) {
+                try { onShow[name](); } catch(e) { console.error(e); }
+            }
 
-            // URL에서 해시 제거 (뒤로가기 흐름이 이미 pushState로 쌓였으면 popstate에서 처리됨)
-            if (location.hash === '#schedule') {
-                history.pushState({}, '', location.pathname + location.search);
+            if (push) {
+                const urlHash = (name === 'main') ? (location.pathname + location.search) : `#${name}`;
+                const stateObj = (name === 'main') ? {} : { page: name };
+                history.pushState(stateObj, '', urlHash);
             }
         }
 
-        // 브라우저 뒤로/앞 버튼 처리: popstate 이벤트
+        // 친구 목록 로딩 함수
+        async function loadFriendlist() {
+            // 만약 서버에서 가져온다면 아래처럼 fetch 사용
+            // const res = await fetch('/api/friends'); friendData = await res.json();
+
+            // 초기화
+            friendItemsEl.innerHTML = '';
+
+            if (!Array.isArray(friendData) || friendData.length === 0) {
+                friendItemsEl.innerHTML = '<p>친구가 없습니다.</p>';
+                return;
+            }
+
+            friendData.forEach(friend => {
+                const card = document.createElement('article');
+                card.className = 'friend-card';
+                card.innerHTML = `
+                    <p><strong>이름:</strong> ${escapeHtml(friend.name)}</p>
+                    <p><strong>카테고리:</strong> ${escapeHtml(friend.category)}</p>
+                    <p><strong>설명:</strong> ${escapeHtml(friend.desc)}</p>
+                    <p><strong>전화:</strong> <a href="tel:${escapeHtml(friend.phone)}">${escapeHtml(friend.phone)}</a></p>
+                `;
+                friendItemsEl.appendChild(card);
+            });
+        }
+
+        // 뒤로가기/앞으로가기 처리
         window.addEventListener('popstate', (e) => {
-            // 해시나 상태에 따라 표시
-            if (location.hash === '#schedule' || (e.state && e.state.page === 'schedule')) {
-                mainEl.classList.add('hidden');
-                scheduleEl.classList.remove('hidden');
-                scheduleEl.setAttribute('aria-hidden', 'false');
-                scheduleEl.focus({ preventScroll: true });
-            } else {
-                scheduleEl.classList.add('hidden');
-                mainEl.classList.remove('hidden');
-                scheduleEl.setAttribute('aria-hidden', 'true');
-            }
+            const page = (e.state && e.state.page) ? e.state.page : (location.hash ? location.hash.replace('#', '') : 'main');
+            if (page in sections) showSection(page, false);
+            else showSection('main', false);
         });
 
-        // 페이지 로드 시 URL에 #schedule이 있으면 그 상태로 보여줌 (직접 링크 대응)
+        // 로드 시 해시 대응
         window.addEventListener('load', () => {
-            if (location.hash === '#schedule') {
-                history.replaceState({ page: 'schedule' }, '', '#schedule');
-                mainEl.classList.add('hidden');
-                scheduleEl.classList.remove('hidden');
-                scheduleEl.setAttribute('aria-hidden', 'false');
-                scheduleEl.focus({ preventScroll: true });
+            const initial = location.hash ? location.hash.replace('#', '') : 'main';
+            if (initial in sections) {
+                if (initial !== 'main') history.replaceState({ page: initial }, '', `#${initial}`);
+                showSection(initial, false);
+            } else {
+                showSection('main', false);
             }
         });
 
-        // 로그아웃 버튼 예시
-        logoutBtn.addEventListener('click', (e) => {
-            e.preventDefault();
-            localStorage.removeItem('token');
-            alert('로그아웃 되었습니다.');
-            window.location.href = '/';
-        });
+        // 섹션 오픈/클로즈 보조 함수
+        function openSchedule() { showSection('schedule'); }
+        function openFriends() { showSection('friends'); }
+        function backToMain() { showSection('main'); }
+
+        // 로그아웃 버튼
+        const logoutBtn = document.getElementById('logoutBtn');
+        if (logoutBtn) {
+            logoutBtn.addEventListener('click', (e) => {
+                e.preventDefault();
+                localStorage.removeItem('token');
+                alert('로그아웃 되었습니다.');
+                window.location.href = '/';
+            });
+        }
+
+        // 수동 새로고침 버튼 연결
+        if (loadFriendsBtn) loadFriendsBtn.addEventListener('click', loadFriendlist);
     </script>
 </body>
 </html>
