--- a/public/main.html
+++ b/public/main.html
@@ -67,6 +67,7 @@
 
     <section id="friends" class="hidden" tabindex="-1" aria-hidden="true">
         <h2>친구</h2>
+        <button id="friendadd" type="button">➕ 친구 추가하기</button>
         <p>친구 목록을 표시합니다.</p>
         <div style="margin:8px 0">
             <button id="load-friends-btn" type="button" class="btn-ghost">친구 목록 새로고침</button>
