--- a/public/main.html
+++ b/public/main.html
@@ -67,16 +67,17 @@
 
     <section id="friends" class="hidden" tabindex="-1" aria-hidden="true">
         <h2>친구</h2>
-        <button id="friendadd" type="button">➕ 친구 추가하기</button>
+        <button id="friendadd" type="button" onclick="openFriendList()">➕ 친구 목록</button>
         <p>친구 목록을 표시합니다.</p>
         <div style="margin:8px 0">
             <button id="load-friends-btn" type="button" class="btn-ghost">친구 목록 새로고침</button>
             <button type="button" class="btn-ghost" onclick="backToMain()">메인으로 돌아가기</button>
         </div>
+    </section>
 
-        <div id="friendlist">
-            <div id="friend-items" aria-live="polite"></div>
-        </div>
+    <section id="friendlist" class="hidden" tabindex="-1" aria-hidden="true">
+        <div id="friend-items" aria-live="polite"></div>
+        
     </section>
 
     <footer>
@@ -84,6 +85,22 @@
     </footer>
 
     <script>
+        async function sendFriendRequest(friendId) {
+            try {
+                const res = await fetch('/db/addFriend', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json'},
+                    credentials: 'include',
+                    body: JSON.stringify({ friendId })
+                });
+                const json = await res.json();
+                return { ok: res.ok, data: json };
+            } catch (err) {
+                console.error('sendFriendRequest error', err)
+                return { ok: false, data: { succes: false, message: "네트워크 오류"}};
+            }
+        }
+
         // 데이터 (실제는 서버에서 fetch 해올 수 있음)
         let friendData = [
             { name: "김영자", category: "운동", desc: "아침 운동", phone: "01012345678"},
@@ -94,6 +111,7 @@
         const mainEl = document.getElementById('main-content');
         const scheduleEl = document.getElementById('schedule');
         const friendsEl = document.getElementById('friends');
+        const friendlistEl = document.getElementById('friendlist');
         const friendItemsEl = document.getElementById('friend-items');
         const loadFriendsBtn = document.getElementById('load-friends-btn');
 
@@ -104,13 +122,15 @@
         const sections = {
             main: mainEl,
             schedule: scheduleEl,
-            friends: friendsEl
+            friends: friendsEl,
+            friendlist: friendlistEl
         };
 
         // 섹션이 보여질 때 실행할 콜백들
         const onShow = {
             friends: () => loadFriendlist(),
-            schedule: () => {/* 필요 시 일정 로드 */}
+            schedule: () => {/* 필요 시 일정 로드 */},
+            friendlist: () => loadFriendlist()
         };
 
         // 섹션 보여주기/숨기기 공용 함수
@@ -189,6 +209,7 @@
         function openSchedule() { showSection('schedule'); }
         function openFriends() { showSection('friends'); }
         function backToMain() { showSection('main'); }
+        function openFriendList() { showSection('friendlist'); }
 
         // 로그아웃 버튼
         const logoutBtn = document.getElementById('logoutBtn');
