--- a/public/login.html
+++ b/public/login.html
@@ -18,29 +18,31 @@
     </section>
     <script>
         const loginBtn = document.getElementById("loginBtn")
+
         loginBtn.addEventListener('click', async() => {
             const id = document.getElementById("id").value;
             const pw = document.getElementById("pw").value;
 
-            const res = await fetch("/api/login", {
-                method: "POST",
-                headers: {"Content-type" : "application/json"},
-                body: JSON.stringify({id, pw})
-            });
-            const data = await res.json();
-            console.log(data);
-            
-            if (data.success){
-                // 로그인 성공
-                // 받아온 JWT를 저장(localStorage)
-                localStorage.setItem('token', data.token);
-                alert("로그인 성공");
-                window.location.href = '/main';
+            try {
+                const res = await fetch("/api/login", {
+                    method: "POST",
+                    headers: {"Content-type" : "application/json"},
+                    credentials: 'include',   // ✅ 세션 쿠키 포함
+                    body: JSON.stringify({id, pw})
+                });
+                const data = await res.json();
+                console.log(data);
+                
+                if (res.ok && data.success ) {
+                    alert("로그인 성공");
+                    window.location.href = '/main';
+                } else {
+                    alert(data.message || "로그인 실패...");
+                }
+            } catch (err) {
+                console.error(err);
+                alert("서버 오류 발생");
             }
-            else {
-                // 로그인 실패
-                alert("로그인 실패...")
-            };
         });
     </script>
 </body>
