--- a/public/main.html
+++ b/public/main.html
@@ -257,7 +257,7 @@
                     const originalText = btn.textContent;
                     btn.textContent = '요청중...';
                     try {
-                        const res = await fetch('/db/addFriend', {
+                        const res = await fetch('/db/findUser', {
                             method: 'POST',
                             headers: { 'Content-Type': 'application/json' },
                             credentials: 'include',
@@ -306,7 +306,7 @@
 
                 try {
                 // 서버에서 친구 목록을 가져옴 (distance 필드 없이 처리)
-                const res = await fetch("/db/addFriend", {
+                const res = await fetch("/db/findUser", {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
                     credentials: "include",
@@ -418,7 +418,7 @@
 
                 // 만약 401이나 기타 상태면 처리
                 if (res.status === 401) {
-                    friendItemsEl.innerHTML = '<p>로그인이 필요합니다.</p>';
+                    friendItemsEl.innerHTML = '<p>로그인이 필요합니다..</p>';
                     return;
                 }
 
@@ -477,6 +477,27 @@
 
         // 수동 새로고침 버튼 연결
         if (loadFriendsBtn) loadFriendsBtn.addEventListener('click', loadFriendlist);
+
+        // 세션 체크
+        async function checkSession() {
+            try {
+                const res = await fetch('/db/getFriends', {
+                    method: "GET",
+                    credentials: 'include'
+                });
+
+                if (res.status === 401) {
+                    alert('로그인 세션이 만료되었습니다.');
+                    window.location.href = '/';
+                }
+            } catch (err) {
+                console.error('세션 확인 중 오류 발생', err);
+            }
+        }
+        
+        document.addEventListener('DOMContentLoaded', () => {
+            checkSession();
+        })
     </script>
 </body>
 </html>
